crates/publisher/src/snapshots/publisher__intents__test__marker_complete_broadcast.snap
---
source: crates/publisher/src/intents.rs
expression: "parse_intents(build_transaction_intents(&txn,\nSome(&BackfillMarker::Complete { truncated_at }),))"
---
[
  [
    "acmeCo/anvils/part=a/pivot=00",
    [
      {
        "_meta": {
          "uuid": "45566778-2334-1112-a002-010000000001"
        },
        "backfillComplete": true,
        "hints": [
          {
            "j": [
              10,
              "b/pivot=00"
            ],
            "p": [
              {}
            ]
          }
        ],
        "is_ack": true,
        "truncatedAt": "1ee833b04afc0000"
      }
    ]
  ],
  [
    "acmeCo/anvils/part=b/pivot=00",
    [
      {
        "_meta": {
          "uuid": "45566778-2334-1112-a002-010000000001"
        },
        "backfillComplete": true,
        "hints": [
          {
            "j": [
              10,
              "a/pivot=00"
            ],
            "p": [
              {}
            ]
          }
        ],
        "is_ack": true,
        "truncatedAt": "1ee833b04afc0000"
      }
    ]
  ]
]
