crates/publisher/src/snapshots/publisher__intents__test__three_producers_four_journals.snap
---
source: crates/publisher/src/intents.rs
expression: build_transaction_intents(&txn)
---
[
  [
    "acmeCo/anvils/part=x/pivot=00",
    [
      {
        "_meta": {
          "uuid": "45566778-2334-1112-a002-010000000001"
        },
        "hints": [
          {
            "j": [
              0,
              ""
            ],
            "p": [
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              }
            ]
          },
          {
            "j": [
              10,
              "y/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              10,
              "z/pivot=00"
            ],
            "p": [
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              },
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              22,
              "hammers/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          }
        ],
        "is_ack": true
      },
      {
        "_meta": {
          "uuid": "01020304-0302-1504-8002-030000000002"
        },
        "is_ack": true
      }
    ]
  ],
  [
    "acmeCo/anvils/part=y/pivot=00",
    [
      {
        "_meta": {
          "uuid": "45566778-2334-1112-a002-010000000001"
        },
        "hints": [
          {
            "j": [
              10,
              "x/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              }
            ]
          },
          {
            "j": [
              10,
              "y/pivot=00"
            ],
            "p": [
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              10,
              "z/pivot=00"
            ],
            "p": [
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              },
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              22,
              "hammers/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          }
        ],
        "is_ack": true
      },
      {
        "_meta": {
          "uuid": "15141312-1716-1918-8402-050000000003"
        },
        "is_ack": true
      }
    ]
  ],
  [
    "acmeCo/anvils/part=z/pivot=00",
    [
      {
        "_meta": {
          "uuid": "01020304-0302-1504-8002-030000000002"
        },
        "hints": [
          {
            "j": [
              10,
              "x/pivot=00"
            ],
            "p": [
              {
                "c": "1122334455667788",
                "p": "AQAAAAAB"
              },
              {}
            ]
          },
          {
            "j": [
              10,
              "y/pivot=00"
            ],
            "p": [
              {
                "c": "1122334455667788",
                "p": "AQAAAAAB"
              },
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              10,
              "z/pivot=00"
            ],
            "p": [
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              22,
              "hammers/pivot=00"
            ],
            "p": [
              {
                "c": "1122334455667788",
                "p": "AQAAAAAB"
              },
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          }
        ],
        "is_ack": true
      },
      {
        "_meta": {
          "uuid": "15141312-1716-1918-8402-050000000003"
        },
        "is_ack": true
      }
    ]
  ],
  [
    "acmeCo/hammers/pivot=00",
    [
      {
        "_meta": {
          "uuid": "45566778-2334-1112-a002-010000000001"
        },
        "hints": [
          {
            "j": [
              16,
              "anvils/part=x/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              }
            ]
          },
          {
            "j": [
              10,
              "y/pivot=00"
            ],
            "p": [
              {},
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              10,
              "z/pivot=00"
            ],
            "p": [
              {
                "c": "5040302010203040",
                "p": "AwAAAAAC"
              },
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          },
          {
            "j": [
              22,
              "hammers/pivot=00"
            ],
            "p": [
              {
                "c": "9181716151413121",
                "p": "BQAAAAAD"
              }
            ]
          }
        ],
        "is_ack": true
      },
      {
        "_meta": {
          "uuid": "15141312-1716-1918-8402-050000000003"
        },
        "is_ack": true
      }
    ]
  ]
]
